--- a/docs/_includes/index/sponsor.html
+++ b/docs/_includes/index/sponsor.html
@@ -11,32 +11,6 @@
           </div>
 
           <div class="bd-partner-sponsor">
-            <a href="https://chainaxe.io/" target="_blank" rel="nofollow">
-              {%
-                include elements/responsive-image.html
-                path="sponsors/chainaxe"
-                extension="png"
-                alt="chainaxe logo"
-                width="85"
-                height="60"
-              %}
-            </a>
-          </div>
-
-          <div class="bd-partner-sponsor">
-            <a href="https://www.keycdn.com/" target="_blank" rel="nofollow">
-              {%
-                include elements/responsive-image.html
-                path="sponsors/keycdn"
-                extension="png"
-                alt="keycdn logo"
-                width="150"
-                height="43.5"
-              %}
-            </a>
-          </div>
-
-          <div class="bd-partner-sponsor">
             <a href="http://tooltwist.com/" target="_blank" rel="nofollow">
               {%
                 include elements/responsive-image.html
@@ -50,7 +24,7 @@
           </div>
 
           <div class="bd-partner-sponsor">
-            <a href="https://www.dontpayfull.com/" target="_blank" rel="nofollow">
+            <a href="https://www.dontpayfull.com/" target="_blank" rel="nofollow" style="mix-blend-mode: multiply;">
               {%
                 include elements/responsive-image.html
                 path="sponsors/dontpayfull"
@@ -58,6 +32,19 @@
                 alt="DontPayFull logo"
                 width="120"
                 height="60"
+              %}
+            </a>
+          </div>
+
+          <div class="bd-partner-sponsor">
+            <a href="https://hyper.host/" target="_blank" rel="nofollow">
+              {%
+                include elements/responsive-image.html
+                path="sponsors/hyper-host"
+                extension="png"
+                alt="Hyper Host logo"
+                width="150"
+                height="50"
               %}
             </a>
           </div>
