--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -43,6 +43,7 @@ $bd-partners-4: 1130px
     display: flex
     margin-left: auto
     margin-right: auto
+    max-width: $bd-partners-4
   .bd-partner
     &.bd-is-sponsor
       flex-grow: 1
