--- a/sass/elements/progress.sass
+++ b/sass/elements/progress.sass
@@ -1,5 +1,6 @@
 $progress-bar-background-color: $border !default
 $progress-value-background-color: $text !default
+$progress-border-radius: $radius-rounded !default
 
 $progress-indeterminate-duration: 1.5s !default
 
@@ -8,7 +9,7 @@ $progress-indeterminate-duration: 1.5s !default
   -moz-appearance: none
   -webkit-appearance: none
   border: none
-  border-radius: $radius-rounded
+  border-radius: $progress-border-radius
   display: block
   height: $size-normal
   overflow: hidden
