--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -115,6 +115,8 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
   font-weight: $weight-light !important
 .has-text-weight-normal
   font-weight: $weight-normal !important
+.has-text-weight-medium
+  font-weight: $weight-medium !important
 .has-text-weight-semibold
   font-weight: $weight-semibold !important
 .has-text-weight-bold
