--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -268,6 +268,9 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 
 .is-radiusless
   border-radius: 0 !important
+  
+.is-borderless
+  border-style: none !important
 
 .is-shadowless
   box-shadow: none !important
