Add style to disabled file input field
When a button is disabled it becomes partially transparent. We do the same with the button part of the file input field.

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -381,6 +381,9 @@ $help-size: $size-small !default
   background-color: $file-cta-background-color
   color: $file-cta-color
 
+.file-input[disabled] ~ .file-cta
+  opacity: 0.5
+
 .file-name
   border-color: $file-name-border-color
   border-style: $file-name-border-style
