Typo fix elemnts => elements

--- a/docs/documentation/layout/tiles.html
+++ b/docs/documentation/layout/tiles.html
@@ -66,7 +66,7 @@ breadcrumb:
 
 {% capture tile_ancestor %}
 <div class="tile is-ancestor">
-  <!-- All other tile elemnts -->
+  <!-- All other tile elements -->
 </div>
 {% endcapture %}
 
