Fix rounded button paddings using a variable

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -219,8 +219,8 @@ $button-static-border-color: $grey-lighter !default
     pointer-events: none
   &.is-rounded
     border-radius: $radius-rounded
-    padding-left: 1em
-    padding-right: 1em
+    padding-left: $button-padding-horizontal
+    padding-right: $button-padding-horizontal
 
 .buttons
   align-items: center
