--- a/docs/_includes/index/sponsor.html
+++ b/docs/_includes/index/sponsor.html
@@ -48,6 +48,19 @@
               %}
             </a>
           </div>
+
+          <div class="bd-partner-sponsor">
+            <a href="https://devsquad.com/" target="_blank" rel="nofollow">
+              {%
+                include elements/responsive-image.html
+                path="sponsors/devsquad"
+                extension="png"
+                alt="DevSquad logo"
+                width="140"
+                height="31"
+              %}
+            </a>
+          </div>
         </div>
       </div>
 
