--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -13,6 +13,7 @@
   display: flex
   flex-wrap: wrap
   justify-content: space-between
+  justify-content: space-around
 
 .bd-partner-sponsor
   align-items: center
@@ -43,7 +44,6 @@ $bd-partners-4: 1130px
     display: flex
     margin-left: auto
     margin-right: auto
-    max-width: $bd-partners-4
   .bd-partner
     &.bd-is-sponsor
       flex-grow: 1
