--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -14033,6 +14033,7 @@ svg {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  justify-content: space-around;
 }
 
 .bd-partner-sponsor {
@@ -14067,7 +14068,6 @@ svg {
     display: flex;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1130px;
   }
   .bd-partner.bd-is-sponsor {
     flex-grow: 1;
