--- a/docs/_includes/index/sponsor.html
+++ b/docs/_includes/index/sponsor.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="bd-partners-list">
       <div class="bd-partner bd-is-sponsor">
-        <p class="bd-partner-title">Sponsors</p>
+        <p class="bd-partner-title" style="text-align: center;">Sponsors</p>
         <div class="bd-partner-sponsors">
           <div class="bd-partner-sponsor">
             <a href="https://themeisle.com/" target="_blank" rel="nofollow">
@@ -63,13 +63,15 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
 
-      <div class="bd-partner bd-is-carbon">
-        <p class="bd-partner-title">Ads via Carbon</p>
-        <div class="bd-partner-carbon">
-          {% include elements/carbon.html %}
-        </div>
-      </div>
+<div class="section" style="background-color: #fafafa; padding-top: 0;">
+  <div class="container">
+    <div style="max-width: 300px; margin: 0 auto;">
+      <p style="color: #b5b5b5; font-size: 0.875rem; margin-bottom: 1rem; text-align: center;">Ads via Carbon</p>
+      {% include elements/carbon.html %}
     </div>
   </div>
 </div>
