--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -12508,7 +12508,7 @@ svg {
 }
 
 .bd-special-shadow {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), transparent);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
   height: 8px;
   left: 0;
   opacity: 0;
