--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -22,7 +22,7 @@
   margin-right: 1rem
   min-height: $carbon-height + $carbon-poweredby-height
 
-.bd-partners
+.bd-partnrs
   background-color: $white-bis
   #carbonads
     .carbon-text
@@ -35,11 +35,11 @@
   font-size: 0.875rem
   margin-bottom: 1rem
 
-$bd-partners-3: 1040px
-$bd-partners-4: 1130px
+$bd-partnrs-3: 1040px
+$bd-partnrs-4: 1130px
 
 +tablet
-  .bd-partners-list
+  .bd-partnrs-list
     align-items: flex-start
     display: flex
     margin-left: auto
