--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -13890,7 +13890,7 @@ svg {
   white-space: nowrap;
 }
 
-.bd-side-sponsors {
+.bd-side-sponsrs {
   margin-top: 3rem;
   text-align: center;
 }
@@ -14044,15 +14044,15 @@ svg {
   min-height: 120px;
 }
 
-.bd-partners {
+.bd-partnrs {
   background-color: #fafafa;
 }
 
-.bd-partners #carbonads .carbon-text {
+.bd-partnrs #carbonads .carbon-text {
   padding-bottom: 0;
 }
 
-.bd-partners #carbonads .carbon-poweredby {
+.bd-partnrs #carbonads .carbon-poweredby {
   display: none;
 }
 
@@ -14063,7 +14063,7 @@ svg {
 }
 
 @media screen and (min-width: 769px), print {
-  .bd-partners-list {
+  .bd-partnrs-list {
     align-items: flex-start;
     display: flex;
     margin-left: auto;
