Add support for tables without table tags

--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -115,7 +115,8 @@ $content-table-foot-cell-color: $text-strong !default
   sup,
   sub
     font-size: 75%
-  table
+  table,
+  .table
     width: 100%
     td,
     th
