fix(Tag): fix delete button in tag

--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -69,6 +69,7 @@ $tag-delete-margin: 1px !default
   padding-right: 0.75em
   white-space: nowrap
   .delete
+    @extend %delete
     margin-left: 0.25rem
     margin-right: -0.375rem
   // Colors
