event proparagtion fix

--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -581,7 +581,7 @@ document.addEventListener('DOMContentLoaded', () => {
       burger.click();
     }
 
-  });
+  }, true);
 
 });
 {% endcapture %}
