Update Functions Corrected Mistake
There is a mistake in functions, the custom-colors doesn't get merged because at the end is used map_merge instead of map-merge.

--- a/sass/utilities/functions.sass
+++ b/sass/utilities/functions.sass
@@ -28,7 +28,7 @@
             $color-invert: findColorInvert($color-base)
 
           // we merge this colors elements as map with bulma colors (we can override them this way, no multiple definition for the same name)
-          $merged-colors: map_merge($merged-colors, ($name: ($color-base, $color-invert)))
+          $merged-colors: map-merge($merged-colors, ($name: ($color-base, $color-invert)))
 
   @return $merged-colors
 
