Create media types mixin for print

--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -128,6 +128,11 @@
     @media screen and (min-width: $fullhd)
       @content
 
+// Media types
+=print
+  @media print
+    @content
+
 // Placeholders
 
 =unselectable
