Create helper class to hide an element when printing

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -258,6 +258,10 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
   .is-invisible-fullhd
     visibility: hidden !important
 
++print
+  .is-hidden-print
+    display: none !important
+
 // Other
 
 .is-marginless
