--- a/docs/_sass/footer.sass
+++ b/docs/_sass/footer.sass
@@ -38,7 +38,7 @@
 
 .bd-footer-support
   @extend %bd-footer-box
-  border-top: none
+  border-top: 2px solid $white-ter
   box-shadow: none
   padding: 3rem
   .bd-footer-title
@@ -49,6 +49,10 @@
 
 .bd-footer-donation
   flex: none
+
+.bd-footer-sponsor a
+  @extend %center
+  height: 70px
 
 +tablet
   .bd-footer-donation
