--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10518,7 +10518,7 @@ label.panel-block:hover {
   padding: 3rem 1.5rem 6rem;
 }
 
-.bd-columns-tool, .bd-footer-donation-action, .bd-footer-star-figure {
+.bd-columns-tool, .bd-footer-sponsor a, .bd-footer-donation-action, .bd-footer-star-figure {
   align-items: center;
   display: flex;
   justify-content: center;
@@ -12069,7 +12069,7 @@ svg {
 }
 
 .bd-footer-support {
-  border-top: none;
+  border-top: 2px solid whitesmoke;
   box-shadow: none;
   padding: 3rem;
 }
@@ -12084,6 +12084,10 @@ svg {
 
 .bd-footer-donation {
   flex: none;
+}
+
+.bd-footer-sponsor a {
+  height: 70px;
 }
 
 @media screen and (min-width: 769px), print {
@@ -12508,7 +12512,7 @@ svg {
 }
 
 .bd-special-shadow {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), transparent);
   height: 8px;
   left: 0;
   opacity: 0;
@@ -13540,11 +13544,8 @@ svg {
     justify-content: space-between;
   }
   .bd-website {
-    margin-top: 3rem;
+    margin-bottom: 3rem;
     width: calc(50% - 3rem);
-  }
-  .bd-website:nth-child(1) {
-    margin-top: 0;
   }
   .bd-website.bd-is-highlighted {
     width: 100%;
@@ -14128,7 +14129,7 @@ svg {
 }
 
 .bd-book-banner {
-  background-color: #fafafa;
+  background-color: #00d1b2;
   position: relative;
 }
 
