Update docs for 0.7.4

--- a/docs/_sass/footer.sass
+++ b/docs/_sass/footer.sass
@@ -20,9 +20,13 @@
   margin-bottom: -10px
   min-height: 30px
   iframe
+    height: 30px
     margin-bottom: 10px
   .fb-like
     margin-left: 10px
+  &.is-github
+    iframe
+      width: 100%
 
 .bd-footer-tsp
   color: $grey-light
