--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*! bulma.io v0.7.2 | MIT License | github.com/jgthms/bulma */
+/*! bulma.io v0.7.4 | MIT License | github.com/jgthms/bulma */
 @-webkit-keyframes spinAround {
   from {
     -webkit-transform: rotate(0deg);
@@ -244,7 +244,7 @@ fieldset[disabled] .pagination-ellipsis {
   cursor: not-allowed;
 }
 
-/*! minireset.css v0.0.3 | MIT License | github.com/jgthms/minireset.css */
+/*! minireset.css v0.0.4 | MIT License | github.com/jgthms/minireset.css */
 html,
 body,
 p,
@@ -302,9 +302,15 @@ html {
 }
 
 img,
-audio,
+embed,
+iframe,
+object,
 video {
   height: auto;
+  max-width: 100%;
+}
+
+audio {
   max-width: 100%;
 }
 
@@ -12048,11 +12054,16 @@ svg {
 }
 
 .bd-footer-iframe iframe {
+  height: 30px;
   margin-bottom: 10px;
 }
 
 .bd-footer-iframe .fb-like {
   margin-left: 10px;
+}
+
+.bd-footer-iframe.is-github iframe {
+  width: 100%;
 }
 
 .bd-footer-tsp {
