Add a mixin with table reset styles

--- a/sass/base/minireset.sass
+++ b/sass/base/minireset.sass
@@ -70,10 +70,8 @@ iframe
 
 // Table
 table
-  border-collapse: collapse
-  border-spacing: 0
+  @extend %table-reset
 
 td,
 th
-  padding: 0
-  text-align: left
+  @extend %table-col-reset
