--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -259,3 +259,17 @@
 
 %overlay
   +overlay
+
+=table-reset
+  border-collapse: collapse
+  border-spacing: 0
+
+%table-reset
+  +table-reset
+
+=table-col-reset
+  padding: 0
+  text-align: left
+
+%table-col-reset
+  +table-col-reset
