--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -24,11 +24,13 @@ $table-striped-row-even-background-color: $white-bis !default
 $table-striped-row-even-hover-background-color: $white-ter !default
 
 .table
+  @extend %table-reset
   @extend %block
   background-color: $table-background-color
   color: $table-color
   td,
   th
+    @extend %table-col-reset
     border: $table-cell-border
     border-width: $table-cell-border-width
     padding: $table-cell-padding
