Add fix for .has-addons centered

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -271,8 +271,9 @@ $button-static-border-color: $grey-lighter !default
         flex-grow: 1
   &.is-centered
     justify-content: center
-    .button:not(.is-fullwidth)
-      margin-left: 0.25rem
-      margin-right: 0.25rem
+    &:not(.has-addons) 
+      .button:not(.is-fullwidth)
+        margin-left: 0.25rem
+        margin-right: 0.25rem
   &.is-right
     justify-content: flex-end
