Add fix for is-right

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -277,3 +277,7 @@ $button-static-border-color: $grey-lighter !default
         margin-right: 0.25rem
   &.is-right
     justify-content: flex-end
+    &:not(.has-addons) 
+      .button:not(.is-fullwidth)
+        margin-left: 0.25rem
+        margin-right: 0.25rem
