--- a/docs/_includes/elements/sponsor-item.html
+++ b/docs/_includes/elements/sponsor-item.html
@@ -6,7 +6,9 @@
   <a
     href="{{ sponsor.url }}"
     target="_blank"
+    {% unless sponsor.follow %}
     rel="nofollow"
+    {% endunless %}
     {% if sponsor.blend %}style="mix-blend-mode: multiply;"{% endif %}
     >
     {%
