Support icon on inputs with class button

--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -190,12 +190,14 @@ $label-colors: $form-colors !default
       z-index: 4
   &.has-icons-left
     .input,
+    .button,
     .select select
       padding-left: $input-height
     .icon.is-left
       left: 0
   &.has-icons-right
     .input,
+    .button,
     .select select
       padding-right: $input-height
     .icon.is-right
