Add is-relative helper plus docs

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -274,3 +274,6 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 
 .is-unselectable
   @extend %unselectable
+
+.is-relative
+  position: relative
