--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -67,6 +67,8 @@ a
     color: currentColor
   &:hover
     color: $link-hover
+  &:visited
+    color: $link-visited
 
 code
   background-color: $code-background
