--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -30,16 +30,21 @@ $dark-invert: $light !default
 // General colors
 
 $background: $white-ter !default
+$background-dark: $black-ter !default
 
 $border: $grey-lighter !default
+$border-dark: $grey-darker !default
 $border-hover: $grey-light !default
+$border-hover-dark: $grey-dark !default
 
 // Text colors
 
 $text: $grey-dark !default
+$text-dark: $grey-light !default
 $text-invert: findColorInvert($text) !default
 $text-light: $grey !default
 $text-strong: $grey-darker !default
+$text-strong-dark: $grey-lighter !default
 
 // Code colors
 
@@ -47,22 +52,31 @@ $code: $red !default
 $code-background: $background !default
 
 $pre: $text !default
+$pre-dark: $text-dark !default
 $pre-background: $background !default
+$pre-background-dark: $background-dark !default
 
 // Link colors
 
 $link: $blue !default
+$link-dark: $blue-light !default
 $link-invert: $blue-invert !default
 $link-visited: $purple !default
 
 $link-hover: $grey-darker !default
+$link-hover-dark: $grey-lighter !default
 $link-hover-border: $grey-light !default
+$link-hover-border-dark: $grey-dark !default
 
 $link-focus: $grey-darker !default
+$link-focus-dark: $grey-lighter !default
 $link-focus-border: $blue !default
+$link-focus-border-dark: $blue-light !default
 
 $link-active: $grey-darker !default
+$link-active-dark: $grey-lighter !default
 $link-active-border: $grey-dark !default
+$link-active-border-dark: $grey-light !default
 
 // Typography
 
