Deploy docs css

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3020,6 +3020,7 @@ fieldset[disabled] .button {
 .textarea {
   background-color: white;
   border-color: #dbdbdb;
+  border-radius: 4px;
   color: #363636;
   box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
   max-width: 100%;
@@ -3358,6 +3359,7 @@ fieldset[disabled]
 .select select {
   background-color: white;
   border-color: #dbdbdb;
+  border-radius: 4px;
   color: #363636;
   cursor: pointer;
   display: block;
