--- a/docs/_includes/content/pro.html
+++ b/docs/_includes/content/pro.html
@@ -12,8 +12,7 @@
       {{ include.content | markdownify }}
 
       {% if include.title == 'No JavaScript' %}
-        {% assign tweet = site.data.love.tweets_by_id.860885116909998080 %}
-        {% include elements/tw.html tweet=tweet modifier='bd-is-grey' %}
+        {% include elements/tw.html tweet_id="860885116909998080" modifier='bd-is-grey' %}
       {% endif %}
     </div>
   </div>
