--- a/docs/_includes/index/customize.html
+++ b/docs/_includes/index/customize.html
@@ -11,6 +11,13 @@
       <h4 class="subtitle is-4">
         Simply set your own Sass variables before importing Bulma
       </h4>
+      <div class="bd-index-custom-tweet">
+        {% include
+          elements/tw.html
+          tweet_id="1070320154452656128"
+          modifier='bd-is-grey'
+        %}
+      </div>
     </header>
 
     <div class="columns">
