--- a/docs/_includes/index/js.html
+++ b/docs/_includes/index/js.html
@@ -19,10 +19,9 @@
 
       <div class="column">
         <div class="bd-index-js-tweet">
-          {% assign tweet = site.data.love.tweets_by_id.860885116909998080 %}
           {% include
             elements/tw.html
-            tweet=tweet
+            tweet_id="860885116909998080"
             modifier='bd-is-grey'
             drawing_id='opinion-free'
             drawing_width=152
