--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -35,6 +35,11 @@
 
 // Customize
 
+.bd-index-custom-tweet
+  .bd-tw
+    margin-left: auto
+    margin-right: auto
+
 .bd-index-custom-title
   color: $grey-light
 
