--- a/docs/_sass/twitter.sass
+++ b/docs/_sass/twitter.sass
@@ -15,6 +15,7 @@ $tw-border: #e1e8ed
   font-size: 16px
   max-width: 420px
   padding: 20px
+  text-align: left
   &.bd-is-white
     background-color: $white
 
@@ -43,7 +44,7 @@ $tw-border: #e1e8ed
     width: 36px
 
 .bd-tw-fullname
-  color: currentColor
+  color: $text-strong
   display: block
   font-size: 16px
   font-weight: 700
