--- a/docs/_includes/elements/tw.html
+++ b/docs/_includes/elements/tw.html
@@ -1,54 +1,55 @@
-{% assign twUrl = "https://twitter.com/" | append: include.tweet.username | append: "/status/" | append: include.tweet.id %}
+{% assign tweet = site.data.love.tweets_by_id[include.tweet_id] %}
+{% assign twUrl = "https://twitter.com/" | append: tweet.username | append: "/status/" | append: tweet.id %}
 
 <article class="bd-tw {{ include.modifier }} {% if include.drawing_id %}bd-has-drawing{% endif %}">
   <header class="bd-tw-header">
     <a class="bd-tw-author" href="{{ twUrl }}" target="_blank">
       <figure class="bd-tw-avatar">
-        <img class="lazyload" src="{{ include.tweet.avatar }}">
+        <img class="lazyload" src="{{ tweet.avatar }}">
       </figure>
       <div class="bd-tw-name">
         <strong class="bd-tw-fullname">
-          {{ include.tweet.fullname }}
+          {{ tweet.fullname }}
         </strong>
         <span class="bd-tw-username">
-          @{{ include.tweet.username }}
+          @{{ tweet.username }}
         </span>
       </div>
     </a>
   </header>
 
   <div class="bd-tw-content">
-    {{ include.tweet.content }}
+    {{ tweet.content }}
   </div>
 
   <p class="bd-tw-date">
     <a href="{{ twUrl }}" target="_blank">
-      {{ include.tweet.date }}
+      {{ tweet.date }}
     </a>
   </p>
 
   <ul class="Tweet-actions">
     <li class="Tweet-action">
-      <a class="TweetAction TweetAction--replyEdge web-intent" href="https://twitter.com/intent/tweet?in_reply_to={{ include.tweet.id }}">
+      <a class="TweetAction TweetAction--replyEdge web-intent" href="https://twitter.com/intent/tweet?in_reply_to={{ tweet.id }}">
         <div class="Icon Icon--reply TweetAction-icon Icon--replyEdge"></div>
       </a>
     </li>
     <li class="Tweet-action Tweet-action--retweet">
-      <a class="TweetAction TweetAction--retweetEdge web-intent" href="https://twitter.com/intent/retweet?tweet_id={{ include.tweet.id }}">
+      <a class="TweetAction TweetAction--retweetEdge web-intent" href="https://twitter.com/intent/retweet?tweet_id={{ tweet.id }}">
         <div class="Icon Icon--retweet TweetAction-icon Icon--retweetEdge"></div>
-        {% if include.tweet.retweets != 0 %}
+        {% if tweet.retweets != 0 %}
           <span class="TweetAction-stat">
-            {{ include.tweet.retweets }}
+            {{ tweet.retweets }}
           </span>
         {% endif %}
       </a>
     </li>
     <li class="Tweet-action Tweet-action--heart">
-      <a class="TweetAction TweetAction--heartEdge web-intent" href="https://twitter.com/intent/like?tweet_id={{ include.tweet.id }}&amp;ref_src=twsrc%5Etfw&amp;ref_url=http%3A%2F%2Fbulma.io%2F&amp;original_referer=http%3A%2F%2Fbulma.io%2F&amp;tw_i={{ include.tweet.id }}&amp;tw_p=tweetembed" target="_blank">
+      <a class="TweetAction TweetAction--heartEdge web-intent" href="https://twitter.com/intent/like?tweet_id={{ tweet.id }}&amp;ref_src=twsrc%5Etfw&amp;ref_url=http%3A%2F%2Fbulma.io%2F&amp;original_referer=http%3A%2F%2Fbulma.io%2F&amp;tw_i={{ tweet.id }}&amp;tw_p=tweetembed" target="_blank">
         <div class="Icon Icon--heartEdge TweetAction-icon Icon--heartEdge"></div>
-        {% if include.tweet.hearts != 0 %}
+        {% if tweet.hearts != 0 %}
           <span class="TweetAction-stat">
-            {{ include.tweet.hearts }}
+            {{ tweet.hearts }}
           </span>
         {% endif %}
       </a>
