--- a/docs/_includes/elements/tws.html
+++ b/docs/_includes/elements/tws.html
@@ -1,43 +1,29 @@
 <div class="container">
   <div class="columns">
     <div class="column is-4">
-      {% assign tweet = site.data.love.tweets_by_id.869284735440363520 %}
-      {% include elements/tw.html tweet=tweet modifier='bd-is-white' %}
-
-      {% assign tweet = site.data.love.tweets_by_id.966731525709619200 %}
-      {% include elements/tw.html tweet=tweet modifier='bd-is-white' %}
-
-      {% assign tweet = site.data.love.tweets_by_id.959005382273355776 %}
-      {% include elements/tw.html tweet=tweet modifier='bd-is-white' %}
+      {% include elements/tw.html tweet_id="869284735440363520" modifier='bd-is-white' %}
+      {% include elements/tw.html tweet_id="966731525709619200" modifier='bd-is-white' %}
+      {% include elements/tw.html tweet_id="959005382273355776" modifier='bd-is-white' %}
     </div>
 
     <div class="column is-4">
-      {% assign tweet = site.data.love.tweets_by_id.915580081938018304 %}
-      {% include elements/tw.html tweet=tweet modifier='bd-is-white' %}
-
-      {% assign tweet = site.data.love.tweets_by_id.835834634655174658 %}
-      {% include elements/tw.html tweet=tweet modifier='bd-is-white' %}
-
-      {% assign tweet = site.data.love.tweets_by_id.910956939886043136 %}
-      {% include elements/tw.html tweet=tweet modifier='bd-is-white' %}
+      {% include elements/tw.html tweet_id="915580081938018304" modifier='bd-is-white' %}
+      {% include elements/tw.html tweet_id="835834634655174658" modifier='bd-is-white' %}
+      {% include elements/tw.html tweet_id="910956939886043136" modifier='bd-is-white' %}
     </div>
 
     <div class="column is-4">
-      {% assign tweet = site.data.love.tweets_by_id.903629781744439297 %}
       {% include
         elements/tw.html
         modifier='bd-is-white'
-        tweet=tweet
+        tweet_id="903629781744439297"
         drawing_id='love-letters'
         drawing_width=240
         drawing_height=120
       %}
 
-      {% assign tweet = site.data.love.tweets_by_id.949986519250624513 %}
-      {% include elements/tw.html tweet=tweet modifier='bd-is-white' %}
-
-      {% assign tweet = site.data.love.tweets_by_id.922849122008354817 %}
-      {% include elements/tw.html tweet=tweet modifier='bd-is-white' %}
+      {% include elements/tw.html tweet_id="949986519250624513" modifier='bd-is-white' %}
+      {% include elements/tw.html tweet_id="922849122008354817" modifier='bd-is-white' %}
     </div>
   </div>
 
