--- a/docs/_includes/index/modifiers.html
+++ b/docs/_includes/index/modifiers.html
@@ -15,10 +15,9 @@
           </h4>
         </header>
 
-        {% assign tweet = site.data.love.tweets_by_id.868829487072464897 %}
         {% include
           elements/tw.html
-          tweet=tweet
+          tweet_id="868829487072464897"
           modifier='bd-is-grey'
           drawing_id='crazy'
           drawing_width=108
