--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -35,8 +35,42 @@
   font-size: 0.875rem
   margin-bottom: 1rem
 
+.bd-minis
+  margin-top: 1rem
+  text-align: center
+
+.bd-minis-title
+  @extend .bd-partner-title
+  @extend %center
+
+.bd-minis-link
+  @extend %center
+  color: $grey
+  .icon
+    margin-right: 0.25em
+  strong
+    color: $grey
+    margin-left: 0.25em
+
+.bd-minis-list
+  align-items: center
+  display: flex
+  justify-content: space-between
+  margin: -1rem
+
+.bd-mini
+  @extend %center
+  box-shadow: 0 5px 10px rgba(black, 0.1)
+  margin: 1rem
+  img
+    display: block
+
 $bd-partnrs-3: 1040px
 $bd-partnrs-4: 1130px
+
++mobile
+  .bd-minis-list
+    flex-direction: column
 
 +tablet
   .bd-partnrs-list
