--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -12,11 +12,11 @@ $bleeding-red: #CA1F26
 $star: #FFD257
 $rss: #f26522
 
-$mauve: #8A4D76;
-$pink: #FA7C91;
-$brown: #757763;
-$beige-light: #D0D1CD;
-$beige-lighter: #EFF0EB;
+$mauve: #8A4D76
+$pink: #FA7C91
+$brown: #757763
+$beige-light: #D0D1CD
+$beige-lighter: #EFF0EB
 
 $carbon-width: 300px
 $carbon-height: 100px
