--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10526,7 +10526,7 @@ label.panel-block:hover {
   padding: 3rem 1.5rem 6rem;
 }
 
-.bd-columns-tool, .bd-footer-sponsor a, .bd-footer-donation-action, .bd-footer-star-figure {
+.bd-columns-tool, .bd-footer-sponsor a, .bd-footer-donation-action, .bd-footer-star-figure, .bd-minis-title, .bd-minis-link, .bd-mini {
   align-items: center;
   display: flex;
   justify-content: center;
@@ -14076,10 +14076,50 @@ svg {
   display: none;
 }
 
-.bd-partner-title {
+.bd-partner-title, .bd-minis-title {
   color: #b5b5b5;
   font-size: 0.875rem;
   margin-bottom: 1rem;
+}
+
+.bd-minis {
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.bd-minis-link {
+  color: #7a7a7a;
+}
+
+.bd-minis-link .icon {
+  margin-right: 0.25em;
+}
+
+.bd-minis-link strong {
+  color: #7a7a7a;
+  margin-left: 0.25em;
+}
+
+.bd-minis-list {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: -1rem;
+}
+
+.bd-mini {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  margin: 1rem;
+}
+
+.bd-mini img {
+  display: block;
+}
+
+@media screen and (max-width: 768px) {
+  .bd-minis-list {
+    flex-direction: column;
+  }
 }
 
 @media screen and (min-width: 769px), print {
