Issue #2464: add menubar component

--- a/sass/components/_all.sass
+++ b/sass/components/_all.sass
@@ -8,6 +8,7 @@
 @import "media.sass"
 @import "menu.sass"
 @import "message.sass"
+@import "menubar.sass"
 @import "modal.sass"
 @import "navbar.sass"
 @import "pagination.sass"
