For rewrite thru sass

--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -9,7 +9,7 @@
     background: none
   .tabs
     ul
-      border-bottom: none
+      border-bottom-style: none
   // Colors
   @each $name, $pair in $colors
     $color: nth($pair, 1)
