--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1088,6 +1088,10 @@ a.has-text-danger:hover, a.has-text-danger:focus {
   font-weight: 400 !important;
 }
 
+.has-text-weight-medium {
+  font-weight: 500 !important;
+}
+
 .has-text-weight-semibold {
   font-weight: 600 !important;
 }
