Moved global button override style

--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -38,6 +38,9 @@ $tabs-toggle-link-active-color: $link-invert !default
   overflow-x: auto
   white-space: nowrap
   a, button
+    font-size: inherit
+    background-color: transparent
+    border: none
     align-items: center
     border-bottom-color: $tabs-border-bottom-color
     border-bottom-style: $tabs-border-bottom-style
