Add more variables

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -278,4 +278,4 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
   @extend %unselectable
 
 .is-relative
-  position: relative
+  position: relative !important
