--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -471,6 +471,7 @@ $help-size: $size-small !default
               z-index: 4
       &.is-expanded
         flex-grow: 1
+        flex-shrink: 1
     &.has-addons-centered
       justify-content: center
     &.has-addons-right
