--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -269,15 +269,16 @@ $button-static-border-color: $grey-lighter !default
           z-index: 4
       &.is-expanded
         flex-grow: 1
+        flex-shrink: 1
   &.is-centered
     justify-content: center
-    &:not(.has-addons) 
+    &:not(.has-addons)
       .button:not(.is-fullwidth)
         margin-left: 0.25rem
         margin-right: 0.25rem
   &.is-right
     justify-content: flex-end
-    &:not(.has-addons) 
+    &:not(.has-addons)
       .button:not(.is-fullwidth)
         margin-left: 0.25rem
         margin-right: 0.25rem
