--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -43,6 +43,10 @@ $weight-medium: 500 !default
 $weight-semibold: 600 !default
 $weight-bold: 700 !default
 
+// Spacing
+
+$block-spacing: 1.5rem !default
+
 // Responsiveness
 
 // The container horizontal gap, which acts as the offset for breakpoints
