--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -1,5 +1,6 @@
 $button-color: $grey-darker !default
 $button-background-color: $white !default
+$button-family: false !default
 
 $button-border-color: $grey-lighter !default
 $button-border-width: $control-border-width !default
@@ -50,6 +51,8 @@ $button-static-border-color: $grey-lighter !default
   border-width: $button-border-width
   color: $button-color
   cursor: pointer
+  @if $button-family
+    font-family: $button-family
   justify-content: center
   padding-bottom: $button-padding-vertical
   padding-left: $button-padding-horizontal
