Init light dark colors

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6014,11 +6014,11 @@ a.list-item {
 
 .message.is-white .message-body {
   border-color: white;
-  color: #4d4d4d;
+  color: #0a0a0a;
 }
 
 .message.is-black {
-  background-color: #fafafa;
+  background-color: #0a0a0a;
 }
 
 .message.is-black .message-header {
@@ -6028,7 +6028,7 @@ a.list-item {
 
 .message.is-black .message-body {
   border-color: #0a0a0a;
-  color: #090909;
+  color: white;
 }
 
 .message.is-light {
@@ -6042,11 +6042,11 @@ a.list-item {
 
 .message.is-light .message-body {
   border-color: whitesmoke;
-  color: #505050;
+  color: #363636;
 }
 
 .message.is-dark {
-  background-color: #fafafa;
+  background-color: whitesmoke;
 }
 
 .message.is-dark .message-header {
@@ -6056,11 +6056,11 @@ a.list-item {
 
 .message.is-dark .message-body {
   border-color: #363636;
-  color: #2a2a2a;
+  color: #242424;
 }
 
 .message.is-primary {
-  background-color: #f5fffd;
+  background-color: #ebfffc;
 }
 
 .message.is-primary .message-header {
@@ -6070,11 +6070,11 @@ a.list-item {
 
 .message.is-primary .message-body {
   border-color: #00d1b2;
-  color: #021310;
+  color: #00947e;
 }
 
 .message.is-link {
-  background-color: #f6f9fe;
+  background-color: #eef3fc;
 }
 
 .message.is-link .message-header {
@@ -6084,11 +6084,11 @@ a.list-item {
 
 .message.is-link .message-body {
   border-color: #3273dc;
-  color: #22509a;
+  color: #153e7e;
 }
 
 .message.is-info {
-  background-color: #f6fbfe;
+  background-color: #ecf7fe;
 }
 
 .message.is-info .message-header {
@@ -6098,11 +6098,11 @@ a.list-item {
 
 .message.is-info .message-body {
   border-color: #209cee;
-  color: #12537e;
+  color: #0a578a;
 }
 
 .message.is-success {
-  background-color: #f6fef9;
+  background-color: #eefcf3;
 }
 
 .message.is-success .message-header {
@@ -6112,11 +6112,11 @@ a.list-item {
 
 .message.is-success .message-body {
   border-color: #23d160;
-  color: #0e301a;
+  color: #157e3a;
 }
 
 .message.is-warning {
-  background-color: #fffdf5;
+  background-color: #fffbeb;
 }
 
 .message.is-warning .message-header {
@@ -6126,11 +6126,11 @@ a.list-item {
 
 .message.is-warning .message-body {
   border-color: #ffdd57;
-  color: #3b3108;
+  color: #947600;
 }
 
 .message.is-danger {
-  background-color: #fff5f7;
+  background-color: #ffebef;
 }
 
 .message.is-danger .message-header {
@@ -6140,7 +6140,7 @@ a.list-item {
 
 .message.is-danger .message-body {
   border-color: #ff3860;
-  color: #cd0930;
+  color: #94001e;
 }
 
 .message-header {
