--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -6,26 +6,60 @@ $warning: $yellow !default
 $danger: $red !default
 
 $light: $white-ter !default
+$lighter: $white-bis !default
 $dark: $grey-darker !default
+$darker: $black-ter !default
 
 // Invert colors
 
 $orange-invert: findColorInvert($orange) !default
+$orange-light: findLightColor($orange) !default
+$orange-dark: findDarkColor($orange) !default
 $yellow-invert: findColorInvert($yellow) !default
+$yellow-light: findLightColor($yellow) !default
+$yellow-dark: findDarkColor($yellow) !default
 $green-invert: findColorInvert($green) !default
+$green-light: findLightColor($green) !default
+$green-dark: findDarkColor($green) !default
 $turquoise-invert: findColorInvert($turquoise) !default
+$turquoise-light: findLightColor($turquoise) !default
+$turquoise-dark: findDarkColor($turquoise) !default
 $cyan-invert: findColorInvert($cyan) !default
+$cyan-light: findLightColor($cyan) !default
+$cyan-dark: findDarkColor($cyan) !default
 $blue-invert: findColorInvert($blue) !default
+$blue-light: findLightColor($blue) !default
+$blue-dark: findDarkColor($blue) !default
 $purple-invert: findColorInvert($purple) !default
+$purple-light: findLightColor($purple) !default
+$purple-dark: findDarkColor($purple) !default
 $red-invert: findColorInvert($red) !default
+$red-light: findLightColor($red) !default
+$red-dark: findDarkColor($red) !default
 
 $primary-invert: $turquoise-invert !default
+$primary-light: $turquoise-light !default
+$primary-dark: $turquoise-dark !default
 $info-invert: $cyan-invert !default
+$info-light: $cyan-light !default
+$info-dark: $cyan-dark !default
 $success-invert: $green-invert !default
+$success-light: $green-light !default
+$success-dark: $green-dark !default
 $warning-invert: $yellow-invert !default
+$warning-light: $yellow-light !default
+$warning-dark: $yellow-dark !default
 $danger-invert: $red-invert !default
+$danger-light: $red-light !default
+$danger-dark: $red-dark !default
+
 $light-invert: $dark !default
+$light-light: $lighter !default
+$light-dark: $dark !default
+
 $dark-invert: $light !default
+$dark-light: $light !default
+$dark-dark: $darker !default
 
 // General colors
 
@@ -53,6 +87,8 @@ $pre-background: $background !default
 
 $link: $blue !default
 $link-invert: $blue-invert !default
+$link-light: $blue-light !default
+$link-dark: $blue-dark !default
 $link-visited: $purple !default
 
 $link-hover: $grey-darker !default
@@ -79,7 +115,7 @@ $size-large: $size-4 !default
 $custom-colors: null !default
 $custom-shades: null !default
 
-$colors: mergeColorMaps(("white": ($white, $black), "black": ($black, $white), "light": ($light, $light-invert), "dark": ($dark, $dark-invert), "primary": ($primary, $primary-invert), "link": ($link, $link-invert), "info": ($info, $info-invert), "success": ($success, $success-invert), "warning": ($warning, $warning-invert), "danger": ($danger, $danger-invert)), $custom-colors) !default
+$colors: mergeColorMaps(("white": ($white, $black, $white, $black), "black": ($black, $white, $black, $white), "light": ($light, $light-invert, $light-light, $light-dark), "dark": ($dark, $dark-invert, $dark-light, $dark-dark), "primary": ($primary, $primary-invert, $primary-light, $primary-dark), "link": ($link, $link-invert, $link-light, $link-dark), "info": ($info, $info-invert, $info-light, $info-dark), "success": ($success, $success-invert, $success-light, $success-dark), "warning": ($warning, $warning-invert, $warning-light, $warning-dark), "danger": ($danger, $danger-invert, $danger-light, $danger-dark)), $custom-colors) !default
 $shades: mergeColorMaps(("black-bis": $black-bis, "black-ter": $black-ter, "grey-darker": $grey-darker, "grey-dark": $grey-dark, "grey": $grey, "grey-light": $grey-light, "grey-lighter": $grey-lighter, "white-ter": $white-ter, "white-bis": $white-bis), $custom-shades) !default
 
 $sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6 $size-7 !default
