--- a/docs/documentation/components/message.html
+++ b/docs/documentation/components/message.html
@@ -27,16 +27,7 @@ meta:
 {% endcapture %}
 
 {% capture message_colors_example %}
-<article class="message is-dark">
-  <div class="message-header">
-    <p>Dark</p>
-    <button class="delete" aria-label="delete"></button>
-  </div>
-  <div class="message-body">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
-  </div>
-</article>
-{% for color in site.data.colors.allColors %}
+{% for color in site.data.colors.justColors %}
 <article class="message is-{{ color }}">
   <div class="message-header">
     <p>{{ color | capitalize }}</p>
