--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -63,7 +63,7 @@ $dark-dark: $darker !default
 
 // General colors
 
-$background: $white-ter !default
+$background: $white-bis !default
 
 $border: $grey-lighter !default
 $border-hover: $grey-light !default
