--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -1,8 +1,8 @@
 $message-background-color: $background !default
 $message-radius: $radius !default
 
-$message-header-background-color: $text !default
-$message-header-color: $text-invert !default
+$message-header-background-color: $white !default
+$message-header-color: $text-strong !default
 $message-header-weight: $weight-bold !default
 $message-header-padding: 0.75em 1em !default
 $message-header-radius: $radius !default
