--- a/docs/_includes/elements/carbon.html
+++ b/docs/_includes/elements/carbon.html
@@ -48,6 +48,6 @@
       }
     }
   </script>
-  <script async src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=bulmaio" id="_carbonads_js" onerror="__fb(this)"></script>
+  <script async src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=bulmaio" id="_carbonads_js" onerror="__fb(this)"></script>
 </div>
 </div>
