--- a/docs/_includes/index/intro.html
+++ b/docs/_includes/index/intro.html
@@ -26,7 +26,7 @@
                   <small>v{{ site.data.meta.version }}</small>
                 </span>
               </a>
-              <a class="button is-light is-large" href="{{ site.data.meta.documentation }}">
+              <a class="button is-light is-large" href="{{ site.url }}{{ site.data.meta.documentation }}">
                 <span>
                   <span>View</span>
                   <strong>docs</strong>
